Fixed bug on navigation in dark mode

--- a/styles/_content.scss
+++ b/styles/_content.scss
@@ -298,6 +298,6 @@ footer.fixed {
   small {
     margin: 10px 0;
     display: block;
-    @include inter($negative, 11px);
+    @include inter($negative, 18px);
   }
 }
