--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -33,6 +33,11 @@ html[data-theme="dark"] {
         // margin: 50px 0 10px;
       }
     }
+    .nav {
+      a:hover {
+        color: $full-white!important;
+      }
+    }
     p {
       a {
         color: $blue!important;
